--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">App</string>
+
+
+    <string name="login">로그인</string>
+    <string name="signup">회원가입</string>
+    <string name="username">아이디</string>
+    <string name="password">비밀번호</string>
 </resources>
