--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="login">로그인</string>
     <string name="signup">회원가입</string>
     <string name="username">아이디</string>
-    <string name="password">비밀번호</string>
+    <string name="password1">비밀번호</string>
+    <string name="password2">비밀번호 다시 입력</string>
 </resources>
