--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="username">아이디</string>
     <string name="password1">비밀번호</string>
     <string name="password2">비밀번호 다시 입력</string>
-
+    <string name="searchbar_hint">검색</string>
+    <string name="image">image</string>
 </resources>
